; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_timedwait_signal_trap_internal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_timedwait_signal_trap_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@KERN_INVALID_VALUE = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i64 0, align 8
@SEMAPHORE_OPTION_NONE = common dso_local global i32 0, align 4
@SEMAPHORE_TIMEOUT_NOBLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @semaphore_timedwait_signal_trap_internal(i32 %0, i32 %1, i32 %2, i64 %3, void (i64)* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca void (i64)*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_3__, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store void (i64)* %4, void (i64)** %11, align 8
  %18 = load i32, i32* %9, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  store i32 %18, i32* %19, align 8
  %20 = load i64, i64* %10, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store i64 %20, i64* %21, align 8
  %22 = call i64 @BAD_MACH_TIMESPEC(%struct.TYPE_3__* %14)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = load i64, i64* @KERN_INVALID_VALUE, align 8
  store i64 %25, i64* %6, align 8
  br label %65

26:                                               ; preds = %5
  %27 = load i32, i32* %8, align 4
  %28 = call i64 @port_name_to_semaphore(i32 %27, i32* %13)
  store i64 %28, i64* %15, align 8
  %29 = load i64, i64* %15, align 8
  %30 = load i64, i64* @KERN_SUCCESS, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %63

32:                                               ; preds = %26
  %33 = load i32, i32* %7, align 4
  %34 = call i64 @port_name_to_semaphore(i32 %33, i32* %12)
  store i64 %34, i64* %15, align 8
  %35 = load i64, i64* %15, align 8
  %36 = load i64, i64* @KERN_SUCCESS, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %60

38:                                               ; preds = %32
  %39 = load i32, i32* @SEMAPHORE_OPTION_NONE, align 4
  store i32 %39, i32* %16, align 4
  store i32 0, i32* %17, align 4
  %40 = load i32, i32* %9, align 4
  %41 = icmp eq i32 %40, 0
  br i1 %41, label %42, label %47

42:                                               ; preds = %38
  %43 = load i64, i64* %10, align 8
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %42
  %46 = load i32, i32* @SEMAPHORE_TIMEOUT_NOBLOCK, align 4
  store i32 %46, i32* %16, align 4
  br label %51

47:                                               ; preds = %42, %38
  %48 = load i32, i32* %9, align 4
  %49 = load i64, i64* %10, align 8
  %50 = call i32 @semaphore_deadline(i32 %48, i64 %49)
  store i32 %50, i32* %17, align 4
  br label %51

51:                                               ; preds = %47, %45
  %52 = load i32, i32* %12, align 4
  %53 = load i32, i32* %13, align 4
  %54 = load i32, i32* %17, align 4
  %55 = load i32, i32* %16, align 4
  %56 = load void (i64)*, void (i64)** %11, align 8
  %57 = call i64 @semaphore_wait_internal(i32 %52, i32 %53, i32 %54, i32 %55, void (i64)* %56)
  store i64 %57, i64* %15, align 8
  %58 = load i32, i32* %12, align 4
  %59 = call i32 @semaphore_dereference(i32 %58)
  br label %60

60:                                               ; preds = %51, %32
  %61 = load i32, i32* %13, align 4
  %62 = call i32 @semaphore_dereference(i32 %61)
  br label %63

63:                                               ; preds = %60, %26
  %64 = load i64, i64* %15, align 8
  store i64 %64, i64* %6, align 8
  br label %65

65:                                               ; preds = %63, %24
  %66 = load i64, i64* %6, align 8
  ret i64 %66
}

declare dso_local i64 @BAD_MACH_TIMESPEC(%struct.TYPE_3__*) #1

declare dso_local i64 @port_name_to_semaphore(i32, i32*) #1

declare dso_local i32 @semaphore_deadline(i32, i64) #1

declare dso_local i64 @semaphore_wait_internal(i32, i32, i32, i32, void (i64)*) #1

declare dso_local i32 @semaphore_dereference(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
